# Otus-cpp-basic-lam

./: CMakeLists.txt  README.md  hello_world.cpp  move_me_out.cpp  move_me_out.hpp
